--- a/sql/src/backends/monet5/merovingian/utils/Makefile.ag
+++ b/sql/src/backends/monet5/merovingian/utils/Makefile.ag
@@ -15,7 +15,13 @@
 # Copyright August 2008-2010 MonetDB B.V.
 # All Rights Reserved.
 
-EXTRA_DIST =
+# MONETDB5: Sabaoth
+# MONETDB:  GDKmalloc, stream, sysdefs.h
+INCLUDES = \
+	$(MONETDB5_INCS) \
+	$(MONETDB_INCS)
+
+EXTRA_DIST = \
 	control.h \
 	database.h \
 	glob.h \
