--- a/clients/src/mapilib/Makefile.ag
+++ b/clients/src/mapilib/Makefile.ag
@@ -16,7 +16,7 @@
 # All Rights Reserved.
 
 MTSAFE
-INCLUDES = $(MONETDB_INCS) $(READLINE_INCS) $(OPENSSL_INCS)
+INCLUDES = $(MONETDB_INCS) $(OPENSSL_INCS)
 
 MAPI_LIBS = $(SOCKET_LIBS) $(OPENSSL_LIBS)
 
