--- a/sql/src/backends/monet5/Makefile.ag
+++ b/sql/src/backends/monet5/Makefile.ag
@@ -59,6 +59,13 @@ headers_h = {
 	SOURCES = embeddedclient.h
 }
 
+headers_pc = {
+	COND = NOT_WIN32
+	HEADERS = pc
+	DIR = libdir/pkgconfig
+	SOURCES = monetdb-embeddedsql.pc.in
+}
+
 headers_mal = {
 	HEADERS = mal
 	DIR = libdir/MonetDB5
