--- a/clients/src/mapilib/Makefile.ag
+++ b/clients/src/mapilib/Makefile.ag
@@ -16,13 +16,13 @@
 # All Rights Reserved.
 
 MTSAFE
-INCLUDES = $(MONETDB_INCS) $(OPENSSL_INCS)
+INCLUDES = $(monetdbtools_CFLAGS) $(OPENSSL_INCS)
 
 MAPI_LIBS = $(SOCKET_LIBS) $(OPENSSL_LIBS)
 
 lib_Mapi = {
 	SOURCES = Mapi.mx Mapi.rc
-	LIBS = $(MAPI_LIBS) $(MONETDB_LIBS) -lmutils -lstream
+	LIBS = $(MAPI_LIBS) $(monetdbtools_LIBS)
 }
 
 headers_mapi = {
