--- a/clients/src/odbc/driver/Makefile.ag
+++ b/clients/src/odbc/driver/Makefile.ag
@@ -17,7 +17,7 @@
 
 INCLUDES = \
 	../.. \
-	$(MONETDB_INCS) \
+	$(monetdbtools_CFLAGS) \
 	$(ODBC_INCS)
 
 DEFS = @DEFS@
@@ -116,7 +116,7 @@ lib_MonetODBC = {
 	SQLTransact.c \
 	driver.rc \
 	ODBC.syms
-	LIBS = ../../mapilib/libMapi $(MONETDB_LIBS) -lstream $(ICONV_LIBS) $(ODBC_LIBS) $(SOCKET_LIBS)
+	LIBS = ../../mapilib/libMapi $(monetdbtools_LIBS) $(ICONV_LIBS) $(ODBC_LIBS) $(SOCKET_LIBS)
 }
 
 headers_pc = {
