--- a/clients/src/perl/Cimpl/Makefile.ag
+++ b/clients/src/perl/Cimpl/Makefile.ag
@@ -16,7 +16,7 @@
 # All Rights Reserved.
 
 SWIGFLAGS = -I../.. $(PERL_INCS)
-INCLUDES = -I../.. $(MONETDB_INCS) $(PERL_INCS)
+INCLUDES = -I../.. $(monetdbtools_CFLAGS) $(PERL_INCS)
 
 #  Both GNU's gcc and Intel's icc do not like to compile swig-generated code
 #  with our strict X_CFLAGS.
