--- a/clients/src/examples/C/Makefile.ag
+++ b/clients/src/examples/C/Makefile.ag
@@ -24,5 +24,5 @@ BINS = {
 	DIR = libdir/MonetDB/Tests
 	SOURCES = sample0.c sample1.c sample2.c sample3.c sample4.c \
 		smack00.c  smack01.c
-	LIBS = $(MAPI_LIBS) ../../mapilib/libMapi $(MONETDB_LIBS) -lstream
+	LIBS = $(MAPI_LIBS) ../../mapilib/libMapi $(monetdbtools_LIBS)
 }
