OpenSSL isn't used around here

--- a/clients/src/mapiclient/Makefile.ag
+++ b/clients/src/mapiclient/Makefile.ag
@@ -16,9 +16,9 @@
 # All Rights Reserved.
 
 MTSAFE
-INCLUDES = -I.. $(monetdbtools_CFLAGS) $(READLINE_INCS) $(OPENSSL_INCS) $(ICONV_CFLAGS)
+INCLUDES = -I.. $(monetdbtools_CFLAGS) $(READLINE_INCS) $(ICONV_CFLAGS)
 
-MAPI_LIBS = $(SOCKET_LIBS) $(OPENSSL_LIBS) $(ICONV_LIBS)
+MAPI_LIBS = $(SOCKET_LIBS) $(ICONV_LIBS)
 
 lib_mcutil = {
 	NOINST
